--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -9,24 +9,48 @@
   <div class="ion-text-center mt-2 mb-2">
     <img class="appLogo" src="/assets/imgs/logo.png">
   </div>
-  <ion-grid class="ion-padding">
+
+  <ion-grid [formGroup]="onRegisterForm" class="ion-padding">
     <ion-item class="rounded bg-light mb-1" lines="none">
       <ion-label position="floating">Full Name</ion-label>
-      <ion-input type="email" placeholder="Name"></ion-input>
+      <ion-input formControlName="fullName" type="email" placeholder="Name"></ion-input>
     </ion-item>
+    <p class="errorMsg" *ngIf="onRegisterForm.get('fullName').hasError('required') && 
+        (onRegisterForm.get('fullName').dirty || onRegisterForm.get('fullName').touched)">
+      *Full name is required!
+    </p>
+
     <ion-item class="rounded bg-light mb-1" lines="none">
       <ion-label position="floating">Email</ion-label>
-      <ion-input type="email" placeholder="Email"></ion-input>
+      <ion-input formControlName="email" type="email" placeholder="Email"></ion-input>
     </ion-item>
+    <p class="errorMsg" *ngIf="(onRegisterForm.get('email').hasError('pattern') || 
+    onRegisterForm.get('email').hasError('required')) && 
+        (onRegisterForm.get('email').dirty || onRegisterForm.get('email').touched)">
+      *Valid email address is required!
+    </p>
+
     <ion-item class="rounded bg-light mb-1" lines="none">
       <ion-label position="floating">Password</ion-label>
-      <ion-input type="password" placeholder="Password"></ion-input>
+      <ion-input formControlName="password" type="password" placeholder="Password"></ion-input>
     </ion-item>
+    <p class="errorMsg" *ngIf="onRegisterForm.get('password').hasError('required') && 
+        (onRegisterForm.get('password').dirty || onRegisterForm.get('password').touched)">
+      *Choose a strong password!
+    </p>
+
     <ion-item class="rounded bg-light mb-1" lines="none">
       <ion-label position="floating">Confirm Password</ion-label>
-      <ion-input type="password" placeholder="Re-enter Password"></ion-input>
+      <ion-input formControlName="cPassword" type="password" placeholder="Re-enter Password"></ion-input>
     </ion-item>
-    <ion-button routerLink="/tabs" routerDirection="root" expand="block" class="rounded h-50">Signup</ion-button>
+    <p class="errorMsg" *ngIf="onRegisterForm.get('cPassword').hasError('required') && 
+        (onRegisterForm.get('cPassword').dirty || onRegisterForm.get('cPassword').touched)">
+      *Confirm your password!
+    </p>
+
+    <ion-button [disabled]="!onRegisterForm.valid" (click)="createAccount(onRegisterForm.value)" expand="block"
+      class="rounded h-50">Signup</ion-button>
+
     <p class="ion-text-center">
       Already have an account?
       <ion-text color="primary" routerLink="/login" routerDirection="back">Login</ion-text>
