Barcode scan + Leadership

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,7 +12,7 @@
       nemo voluptates excepturi ipsa, repellendus odio perferendis voluptas repudiandae laborum, amet dolorum.
       Similique, rerum alias?</p>
     <div class="scanIconContainer mt-3 ion-text-center">
-      <img src="/assets/imgs/scan.png">
+      <img (click)="scanBarcode()" src="/assets/imgs/scan.png">
       <p class="appTxt gray mt-0">Click on scan icon to scan a barcode!</p>
     </div>
   </ion-grid>
